syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AwsCodeDeployInstanceSyncPerpetualTaskParams {
  string region = 1;
  bytes filter = 2;
  bytes aws_config = 3;
  bytes encrypted_data = 4;
}
